app/assets/stylesheets/welcome.css
.view-container > div {
    margin-left: 100px;
}

#options-container {
    width: 80%;
    height: 60%;
    display: flex;
    column-gap: 3.5%;
    row-gap: 20px;
    justify-content: center;
    align-items: center;
    flex-wrap: wrap;
    margin-top: auto;
    margin-bottom: 50px;
}

#options-container div:nth-child(1){
    background-color: #BDB143;
    width: 56%;
}

#options-container div:nth-child(2){
    background-color: #722F8A;
    width: 36%;
}


#options-container div:nth-child(3){
    background-color: #2F748A;
    width: 31%;
}

#options-container div:nth-child(4){
    background-color: #43A0BD;
    width: 61%;
}

.option {
    height: 40%;
    border-radius: 15px;
    display: flex;
    padding: 10px;
    color: white;
    box-shadow: 25px 22px 38px -11px rgba(64,64,64,0.41);
    cursor: pointer;
}

#greeting {
    margin-top: 50px;
}

.option .icon {
    font-size: 7em;
    align-self: center;
}

.option p, .option i {
    align-self: flex-end;
}

.option a {
    display: inherit;
    width: 100%;
    text-decoration: none;
    color: inherit;
}

.option p {
    font-size: 2em;
    font-weight: 300;
    margin-left: auto;
    margin-bottom: 0;
}

